force-app/src/objects/OrderApi__Access_Permission__c.object
<CustomObject>
    <description>Access Permissions control the accessibility of content accessed via the API.</description>
    <fields>
        <fullName>EventApi__Event_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to the Event Category configured with the Access Permission.</description>
        <inlineHelpText>** System Calculated ** Link to the Event Category configured with the Access Permission.</inlineHelpText>
        <label>Event Category</label>
        <referenceTo>EventApi__Event_Category__c</referenceTo>
        <relationshipLabel>Access Permissions (Template)</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Status_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** The link to the Event Status Page configured with the Access Permission.</description>
        <inlineHelpText>** System Calculated ** The link to the Event Status Page required for Access Permission.</inlineHelpText>
        <label>Event Status Page</label>
        <referenceTo>EventApi__Event_Status_Page__c</referenceTo>
        <relationshipLabel>Page Access Permissions</relationshipLabel>
        <relationshipName>Page_Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Event related to the configured Access Permission.</description>
        <inlineHelpText>Link to the Event related to the configured Access Permission.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to the Registration Group configured with the Access Permission.</description>
        <inlineHelpText>** System Calculated ** Link to the Registration Group configured with the Access Permission.</inlineHelpText>
        <label>Registration Group</label>
        <referenceTo>EventApi__Registration_Group__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to the Schedule Item configured with the Access Permission.</description>
        <inlineHelpText>** System Calculated ** Link to the Schedule Item configured with the Access Permission.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsor_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** The link to the Sponsor Package configured with the Access Permission.</description>
        <inlineHelpText>** System Calculated ** The link to the Sponsor Package configured with the Access Permission.</inlineHelpText>
        <label>Sponsor Package</label>
        <referenceTo>EventApi__Sponsor_Package__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** The link to the Ticket Type configured with the Access Permission.</description>
        <inlineHelpText>** System Calculated ** The link to the Ticket Type configured with the Access Permission.</inlineHelpText>
        <label>Ticket Type</label>
        <referenceTo>EventApi__Ticket_Type__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LTE__Menu_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates Access Permissions to the Menu Item object.</description>
        <inlineHelpText>Relates Access Permissions to the Menu Item object.</inlineHelpText>
        <label>Community Menu Item</label>
        <referenceTo>LTE__Menu_Item__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LTE__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates Access Permissions to the Site object.</description>
        <inlineHelpText>Relates Access Permissions to the Site object.</inlineHelpText>
        <label>Community Site</label>
        <referenceTo>LTE__Site__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Badge_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** If &quot;User Restricted Access Rule&quot; is unchecked, a link to the Badge Type required to access the content is required.</description>
        <inlineHelpText>** Conditionally Required ** If &quot;User Restricted Access Rule&quot; is unchecked, a link to the Badge Type required to access the content is required.</inlineHelpText>
        <label>Badge Type</label>
        <referenceTo>OrderApi__Badge_Type__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Catalog that the Display Permission is controlling.</description>
        <inlineHelpText>Link to the related Catalog that the Display Permission is controlling.</inlineHelpText>
        <label>Catalog</label>
        <referenceTo>OrderApi__Catalog__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Icon__c</fullName>
        <description>** System Calculated ** Icon for the related Badge Type with Badge Name.</description>
        <formula>IF(OrderApi__Badge_Type__c != null, OrderApi__Badge_Type__r.OrderApi__Icon__c, &quot;Image Not Available&quot;) &amp; &quot; &quot; &amp;  HYPERLINK(&quot;/&quot; &amp; OrderApi__Badge_Type__c, OrderApi__Badge_Type__r.Name, &quot;_tab&quot;)</formula>
        <inlineHelpText>** System Calculated ** Icon for the related Badge Type with Badge Name.</inlineHelpText>
        <label>Enabled Badge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the controlled Item Class -- when linked to an Item Class the Access Permission will clone itself by default to all Items created as a child to the Item Class.</description>
        <inlineHelpText>Link to the controlled Item Class -- when linked to an Item Class the Access Permission will clone itself by default to all Items created as a child to the Item Class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Default Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When linked to an Item - the Access Permission serves as validation for wether the purchasing Account or Contact is allowed to be assigned and/or sold the Item.</description>
        <inlineHelpText>When linked to an Item - the Access Permission serves as validation for wether the purchasing Account or Contact is allowed to be assigned and/or sold the Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Page that the Display Permission is controlling.</description>
        <inlineHelpText>Link to the related Page that the Display Permission is controlling.</inlineHelpText>
        <label>Page</label>
        <referenceTo>PagesApi__Page__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Site that the Display Permission is controlling.</description>
        <inlineHelpText>Link to the related Site that the Display Permission is controlling.</inlineHelpText>
        <label>Site</label>
        <referenceTo>PagesApi__Site__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Store that the Display Permission is controlling.</description>
        <inlineHelpText>Link to the related Store that the Display Permission is controlling.</inlineHelpText>
        <label>Store</label>
        <referenceTo>OrderApi__Store__c</referenceTo>
        <relationshipLabel>Access Permissions</relationshipLabel>
        <relationshipName>Access_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Access Permission</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Access Permission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>